--- a/package.json
+++ b/package.json
@@ -41,10 +41,13 @@
   "dependencies": {
     "chalk": "2.3.0",
     "execa": "0.8.0",
+    "make-dir": "1.1.0",
     "meow": "4.0.0",
     "resolve-cwd": "2.0.0",
     "subarg": "1.0.0",
     "sudo-block": "2.0.0",
-    "update-notifier": "2.3.0"
+    "truffle": "4.0.4",
+    "update-notifier": "2.3.0",
+    "user-home": "2.0.0"
   }
 }
