--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "node": ">=4"
   },
   "files": [
-    "cli.js"
+    "cli.js",
+    "lib"
   ],
   "keywords": [
     "node",
@@ -40,12 +41,16 @@
   },
   "dependencies": {
     "chalk": "2.3.0",
+    "download": "6.2.5",
     "execa": "0.8.0",
+    "is-my-json-valid": "2.17.1",
+    "listr": "0.13.0",
     "make-dir": "1.1.0",
     "meow": "4.0.0",
     "resolve-cwd": "2.0.0",
     "subarg": "1.0.0",
     "sudo-block": "2.0.0",
+    "sudo-prompt": "8.1.0",
     "truffle": "4.0.4",
     "update-notifier": "2.3.0",
     "user-home": "2.0.0"
