--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "description": "dnpm is a decentralyzed node package manager",
   "license": "MIT",
-  "repository": "matthieuh/scaling-fiesta",
+  "repository": "matthieuh/dnpm",
   "author": {
     "name": "Matthieu Hostache",
     "email": "matthieu.hostache@gmail.com",
