Add publish cmd which upload files specified in manifest to ifs network

--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "private": true,
   "name": "dnpm",
   "version": "0.0.0",
   "description": "dnpm is a decentralyzed node package manager",
@@ -17,7 +16,8 @@
     "node": ">=4"
   },
   "files": [
-    "cli.js"
+    "cli.js",
+    "lib"
   ],
   "keywords": [
     "node",
@@ -46,7 +46,8 @@
     "fs-extra": "5.0.0",
     "get-stream": "3.0.0",
     "ipfs": "0.27.7",
-    "ipfs-api": "17.3.0",
+    "ipfs-api": "17.5.0",
+    "ipfsd-ctl": "0.27.3",
     "is-my-json-valid": "2.17.1",
     "listr": "0.13.0",
     "make-dir": "1.1.0",
