--- a/package.json
+++ b/package.json
@@ -39,24 +39,18 @@
     ]
   },
   "dependencies": {
-    "buffer": "5.0.8",
     "chalk": "2.3.0",
     "execa": "0.8.0",
     "fs-extra": "5.0.0",
-    "get-stream": "3.0.0",
-    "ipfs": "0.27.7",
     "ipfs-api": "17.5.0",
     "ipfsd-ctl": "0.27.3",
-    "is-my-json-valid": "2.17.1",
     "listr": "0.13.0",
-    "make-dir": "1.1.0",
     "meow": "4.0.0",
-    "pad-stream": "2.0.0",
+    "read-pkg-up": "3.0.0",
     "resolve-cwd": "2.0.0",
     "rimraf": "2.6.2",
     "subarg": "1.0.0",
     "sudo-block": "2.0.0",
-    "sudo-prompt": "8.1.0",
     "truffle": "4.0.4",
     "update-notifier": "2.3.0",
     "user-home": "2.0.0"
