--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "chalk": "2.3.0",
     "execa": "0.8.0",
     "fs-extra": "5.0.0",
+    "ipfs": "0.27.7",
     "ipfs-api": "17.5.0",
     "ipfsd-ctl": "0.27.3",
     "listr": "0.13.0",
